# BTAG-Code

./: CMakeLists.txt  README.md  appcodes.h  basewin.h  main.cpp  mainwin.cpp  mainwin.h
idea/: modules.xml
